Bug 102020 - Fatal regression in 10.99.1: failed at pulsecore/source.c:2443, function pa_source_set_latency_range(). Aborting.
Summary: Fatal regression in 10.99.1: failed at pulsecore/source.c:2443, function pa_s...
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 99067
  Show dependency treegraph
 
Reported: 2017-08-03 06:38 UTC by Sergey Kondakov
Modified: 2017-08-04 06:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
pulse_10.99.1-abort.log (39.17 KB, text/plain)
2017-08-03 06:38 UTC, Sergey Kondakov
Details

Description Sergey Kondakov 2017-08-03 06:38:59 UTC
Created attachment 133218 [details]
pulse_10.99.1-abort.log

After the update from 10.0.0 to 10.99.1 (including revision 7ebe7b8a35ad70f611bc08229b1beae1afaf6e00) PA no longer starts.
The build is https://build.opensuse.org/package/show/home:X0F:HSF/pulseaudio
It's configured to be launched by qjackctl instead of autospawn, then first load jack sinks (+module-echo-cancel) and then udev.
JACK server is configured for 512 frames and 3 periods (32ms).
Comment 1 Tanu Kaskinen 2017-08-03 07:39:29 UTC
Thank you for reporting!

Fix submitted:
https://patchwork.freedesktop.org/patch/170082/
Comment 2 Sergey Kondakov 2017-08-04 05:18:41 UTC
Thanks for the fix, it seems to be working !
Feel free to close this as you find appropriate.
Comment 3 Tanu Kaskinen 2017-08-04 06:11:43 UTC
I applied the fix to master now, closing bug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.